--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Duncam.GitHub.io</h1>
+      <h1 class="project-name">蝼蚁之力</h1>
       <h2 class="project-tagline">duncam&#39;s blog</h2>
     </section>
 
