--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Duncam.GitHub.io by duncam</title>
+    <title>千里之行，始于足下 by duncam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">蝼蚁之力</h1>
+      <h1 class="project-name">千里之行，始于足下</h1>
       <h2 class="project-tagline">duncam&#39;s blog</h2>
     </section>
 
