修改了测试页面

--- a/Sections/test.html
+++ b/Sections/test.html
@@ -14,6 +14,10 @@
       <h1 class="project-name">千里之行，始于足下</h1>
       <h2 class="project-tagline">duncam&#39;s blog</h2>
     </section>
+    
+    <section class="main-content">
+    <h3>
+    <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
     <h1>This is H1</h1>
 
@@ -25,7 +29,7 @@
 　　　　|--　_layouts
 　　　　|　　　|--　default.html
     </code></pre>
-
+    </section>
 
   </body>
 </html>
