修改了主页页面

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         <ul>
         <li><a href="http://25.io/mou/">http://25.io/mou/</a></li>
         </ul>
+        
+        <h3>chrome插件</h3>
+
+        <ul>
+        <li><a href="https://chrome.google.com/webstore/search/Gliffy?hl=en-US">画图工具Gliffy</a></li>
+        </ul>
 
 
       <footer class="site-footer">
